--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@ https://templatemo.com/tm-520-highway
             </div>
             <div class="filter-categories">
                 <ul class="project-filter">
-                    <li class="filter active" data-filter="all"><span>SHOW ALL</span></li>
-                    <li class="filter" data-filter="3d"><span>3D GRAPHICS</span></li>
+                    <li class="filter" data-filter="all"><span>SHOW ALL</span></li>
+                    <li class="filter" data-filter="graphics"><span>3D GRAPHICS</span></li>
                     <li class="filter" data-filter="branding"><span>CAMPAIGNS</span></li>
                     <li class="filter" data-filter="photography"><span>PHOTOGRAPHY</span></li>
                     <li class="filter" data-filter="webdesign"><span>WEB DESIGN</span></li>
                     <li class="filter" data-filter="socialmedia"><span>SOCIAL MEDIA</span></li>
-                    <li class="filter" data-filter="illustrations"><span>ILLUSTRATIONS</span></li>
+                    <li class="filter" data-filter="others"><span>OTHERS</span></li>
                 </ul>
             </div>
         </div>
     </div>
 
         <div class="container-fluid">
-            <div class="col-md-4 col-sm-6 col-xs-6">
+            <div class="col-md-4 col-sm-6">
 
                 <!-- <div class="portfolio-overlay"></div> -->
                 
-                <div class="portfolio-item 3d branding">
-                    <a href="gallery.html">    
+                <div class="portfolio-item graphics branding socialmedia">
+                    <a href="gallery.html mix 3D">    
                         <div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -118,8 +118,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-                <div class="portfolio-item 3d branding photography">
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item branding socialmedia photography">
                     <a href="gallery2.html"><div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -133,7 +133,7 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
+            <div class="col-md-4 col-sm-6">
                 <div class="portfolio-item branding">
                     <a href="gallery3.html"><div class="thumb">
                         <div class="hover-effect">
@@ -148,7 +148,7 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
+            <div class="col-md-4 col-sm-6">
                 <div class="portfolio-item branding">
                     <a href="gallery4.html"><div class="thumb">
                         <div class="hover-effect">
@@ -163,8 +163,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-                <div class="portfolio-item">
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item branding">
                     <a href="gallery5.html"><div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -178,7 +178,7 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
+            <div class="col-md-4 col-sm-6">
                 <div class="portfolio-item photography">
                     <a href="gallery6.html"><div class="thumb">
                         <div class="hover-effect">
@@ -188,13 +188,13 @@ https://templatemo.com/tm-520-highway
                             </div>
                         </div>
                         <div class="image">
-                            <img src="img/main_podskok3.png">
+                            <img src="img/main_podskok2-2.png">
                         </div>
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-                <div class="portfolio-item">
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item branding">
                     <a href="gallery7.html"><div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -208,8 +208,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-                <div class="portfolio-item">
+            <div class="col-md-4 col-sm-6">
+                <div class="portfolio-item branding socialmedia">
                     <a href="gallery8.html"><div class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -223,8 +223,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-            	<div class="portfolio-item">
+            <div class="col-md-4 col-sm-6">
+            	<div class="portfolio-item webdesign">
                 	<a href="gallery9.html"><div  class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -238,8 +238,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-            	<div class="portfolio-item photography">
+            <div class="col-md-4 col-sm-6">
+            	<div class="portfolio-item branding photography">
                 	<a href="gallery10.html"><div  class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -253,8 +253,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-            	<div class="portfolio-item">
+            <div class="col-md-4 col-sm-6">
+            	<div class="portfolio-item branding">
                 	<a href="gallery11.html"><div  class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -268,8 +268,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-            	<div class="portfolio-item photography">
+            <div class="col-md-4 col-sm-6">
+            	<div class="portfolio-item branding">
                 	<a href="gallery12.html"><div  class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -283,8 +283,8 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
-            	<div class="portfolio-item">
+            <div class="col-md-4 col-sm-6">
+            	<div class="portfolio-item others">
                 	<a href="gallery13.html"><div  class="thumb">
                         <div class="hover-effect">
                             <div class="hover-content">
@@ -298,7 +298,7 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
+            <div class="col-md-4 col-sm-6">
             	<div class="portfolio-item">
                 	<a href="img/big_portfolio_item_9.png" data-lightbox="image-1"><div class="thumb">
                         <div class="hover-effect">
@@ -313,7 +313,7 @@ https://templatemo.com/tm-520-highway
                     </div></a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-6">
+            <div class="col-md-4 col-sm-6">
             	<div class="portfolio-item">
                 	<a href="img/big_portfolio_item_9.png" data-lightbox="image-1"><div class="thumb">
                         <div class="hover-effect">
@@ -436,23 +436,24 @@ https://templatemo.com/tm-520-highway
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
   
+
   <script type="text/javascript">
-      $(document).ready(function(){
-          $('.filter').click(function(){
-              const value = $(this).attr('data-filter');
-              if (value == 'all'){
-                  $('.portfolio-item').show('1000');
-              }
-              else{
-                  $('.portfolio-item').not('.'+value).hide('1000');
-                  $('.portfolio-item').filter('.'+value).show('1000');
-              }
-          })
-          $('.filter').click(function(){
-              $(this).addClass('active').siblings().removeClass('active');
-          })
-      })
-  </script>
+    $(document).ready(function(){
+        $('.filter').click(function(){
+            const value = $(this).attr('data-filter');
+            if (value == 'all'){
+                $('.portfolio-item').parent().show('1000');
+            }
+            else{
+                $('.portfolio-item').not('.'+value).parent().hide('1000');
+                $('.portfolio-item').filter('.'+value).parent().show('1000');
+            }
+        })
+        $('.filter').click(function(){
+            $(this).addClass('active').siblings().removeClass('active');
+        })
+    })
+</script>
 
     
 </body>
